--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  padding: 5%;
 }
 
 .App-logo {
@@ -26,6 +27,12 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.completed {
+  text-decoration: line-through;
+  cursor: pointer;
+  color: black;
 }
 
 @keyframes App-logo-spin {
