--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -1,8 +1,14 @@
 .App {
   text-align: center;
   padding: 5%;
+  color: red;
 }
-
+input {
+  border: 1px solid black;
+}
+button {
+  margin: 1%;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
